--- a/src/components/payment/payment.scss
+++ b/src/components/payment/payment.scss
@@ -5,6 +5,60 @@
   gap: 154px;
   align-items: center;
 
+  .payment-modal {
+    width: 1167px;
+    margin: auto;
+    background: #040404;
+    border-radius: 15px;
+
+    .payment-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 145px 0;
+
+      h4 {
+        font-family: "e-Ukraine Head";
+        font-style: normal;
+        font-weight: 300;
+        font-size: 30px;
+        line-height: 36px;
+        color: #ededed;
+        margin-bottom: 70px;
+      }
+
+      button {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 17px;
+        color: #ededed;
+        padding: 17px 35px;
+        border: none;
+        background: none;
+        box-shadow: 0px -2px 0px #ededed, 0px 2px 0px #ededed;
+
+        &:first-child {
+          background: rgb(#ff5600, 0.3);
+          border-radius: 15px 0 0 15px;
+        }
+
+        &:last-child {
+          background: rgb(#ff5600, 0.5);
+          border-radius: 0 15px 15px 0;
+        }
+      }
+    }
+
+    .btn-course {
+      button {
+        width: 100% !important;
+        padding: 22px 0;
+        border-radius: 0 0 15px 15px;
+      }
+    }
+  }
+
   &-left {
     display: flex;
     flex-direction: column;
