--- a/src/components/student/mentor/mentor.scss
+++ b/src/components/student/mentor/mentor.scss
@@ -120,102 +120,6 @@
       color: #ededed;
     }
   }
-
-  .box-content {
-    width: 410px;
-    .box-header {
-      background: linear-gradient(180deg, #ff5600 -46.08%, #8e1010 100%);
-      border-radius: 15px 15px 0 0;
-      display: flex;
-      align-items: center;
-      gap: 22px;
-      padding: 23px 20px;
-      h6 {
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 24px;
-        color: #ededed;
-        margin: 0;
-      }
-
-      p {
-        font-weight: 300;
-        font-size: 16px;
-        line-height: 19px;
-        color: #ededed;
-        margin-bottom: 0;
-        margin-top: 6px;
-      }
-
-      img {
-        width: 61px;
-        height: 61px;
-        border-radius: 50%;
-      }
-    }
-
-    button {
-      background: #0f0f0f !important;
-      border-radius: 0px 0px 15px 15px;
-      display: block;
-      font-weight: 300;
-      font-size: 14px;
-      line-height: 17px;
-      text-align: center;
-      color: #ededed;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .box-img-btn {
-      display: flex;
-      gap: 20px;
-      margin-top: 12px;
-      margin-bottom: 10px;
-
-      .box-body-right {
-        border: 1px dashed #ededed;
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px;
-        gap: 10px;
-        p {
-          margin: 0;
-        }
-      }
-    }
-
-    .box-body {
-      background: rgb(#ededed, 0.1);
-      padding: 17px;
-
-      p {
-        font-weight: 300;
-        font-size: 14px;
-        line-height: 17px;
-        color: #ededed;
-        margin: 0;
-        &.text {
-          margin-bottom: 11px;
-        }
-      }
-
-      .box-image-content {
-        display: flex;
-        flex-direction: column;
-        gap: 9px;
-      }
-
-      .box-image {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-      }
-    }
-  }
 }
 
 .mentor-container {
@@ -233,5 +137,114 @@
     line-height: 58px;
     margin: 0;
     padding-left: 220px;
+  }
+}
+
+.box-content {
+  width: 410px;
+  .box-header {
+    background: linear-gradient(180deg, #ff5600 -46.08%, #8e1010 100%);
+    border-radius: 15px 15px 0 0;
+    display: flex;
+    align-items: center;
+    gap: 22px;
+    padding: 23px 20px;
+    position: relative;
+    .img-logo {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+
+      img {
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+      }
+    }
+    h6 {
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 24px;
+      color: #ededed;
+      margin: 0;
+    }
+
+    p {
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 19px;
+      color: #ededed;
+      margin-bottom: 0;
+      margin-top: 6px;
+    }
+
+    img {
+      width: 61px;
+      height: 61px;
+      border-radius: 50%;
+    }
+  }
+
+  button {
+    background: #0f0f0f !important;
+    border-radius: 0px 0px 15px 15px;
+    display: block;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #ededed;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .box-img-btn {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 12px;
+    margin-bottom: 10px;
+
+    .box-body-right {
+      border: 1px dashed #ededed;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
+      gap: 10px;
+      p {
+        margin: 0;
+      }
+    }
+  }
+
+  .box-body {
+    background: rgb(#ededed, 0.1);
+    padding: 17px;
+
+    p {
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      color: #ededed;
+      margin: 0;
+      &.text {
+        margin-bottom: 11px;
+      }
+    }
+
+    .box-image-content {
+      display: flex;
+      flex-direction: column;
+      gap: 9px;
+    }
+
+    .box-image {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
   }
 }
