--- a/src/components/student/student.scss
+++ b/src/components/student/student.scss
@@ -1,4 +1,8 @@
 .student {
+  a {
+    text-decoration: none;
+  }
+
   &-row {
     position: relative;
     .bg-bottom {
@@ -143,7 +147,7 @@
 
   .student-recommandation {
     position: relative;
-    padding: 303px 145px 89px 133px;
+    padding: 303px 345px 89px 133px;
     display: grid;
     align-items: center;
     gap: 44px;
@@ -152,12 +156,6 @@
     .btn-content {
       display: flex;
       justify-content: flex-end;
-      gap: 50px;
-      margin-top: 59px;
-      & > .try-btn:first-child {
-        background-color: transparent !important;
-        border: 1px solid #ff5600;
-      }
     }
 
     .recommandation-image {
@@ -205,6 +203,22 @@
           max-width: 435px !important;
         }
       }
+    }
+  }
+}
+
+.training-course {
+  .product-btn {
+    button {
+      background: rgb(#8e1010, 0.5) !important;
+    }
+  }
+}
+
+.userful-course {
+  .product-btn {
+    button {
+      background: rgb(#10788e, 0.5) !important;
     }
   }
 }
