--- a/src/components/student/whatNext/whatNext.scss
+++ b/src/components/student/whatNext/whatNext.scss
@@ -210,6 +210,7 @@
       color: #ededed;
       margin-top: 25px;
       margin-bottom: 12px;
+      min-height: 48px;
     }
 
     .product-name {
