--- a/src/index.css
+++ b/src/index.css
@@ -238,6 +238,11 @@ code {
   color: #ededed;
 }
 
+.row {
+  margin: 0;
+  padding: 0;
+}
+
 @media only screen and (max-width: 1919px) {
   .app-container {
     display: none;
