--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -97,6 +97,24 @@
   }
 }
 
+.bg-btn {
+  padding: 15px 75px;
+  background: #0f0f0f;
+  box-shadow: 0px 1px 0px #ff8001;
+  border-radius: 15px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ededed;
+  border: none;
+
+  &.active {
+    background: #ff5600;
+    box-shadow: 0px 1px 0px #ededed;
+    border-radius: 15px;
+  }
+}
+
 .checkbox-wrapper-40 {
   --borderColor: #ededed;
   --borderWidth: 0.125em;
