--- a/src/components/newCourse/newCourse.scss
+++ b/src/components/newCourse/newCourse.scss
@@ -32,7 +32,6 @@
         display: flex;
         gap: 116px;
         align-items: center;
-
         &-upload {
           width: 338px;
           height: 250px;
@@ -42,6 +41,23 @@
           align-items: center;
           justify-content: center;
           border-radius: 50%;
+          position: relative;
+
+          .upload-img-header {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 50%;
+
+            img {
+              width: 100%;
+              height: 100%;
+            }
+          }
 
           & > div {
             display: flex;
